--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,14 @@
     <string name="address">주소</string>
     <string name="complete">완료</string>
 
+    <!--    findID/PW-->
+    <string name="find_username">사용자 이름</string>
+    <string name="findIDView">아이디 찾기</string>
+    <string name="foudnIDView">아이디 찾기 결과</string>
+    <string name="noID">일치하는 회원정보가 없습니다.</string>
+    <string name="find_email">Email</string>
+    <string name="findPWView">비밀번호 찾기</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
