--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,14 @@
     <string name="noID">일치하는 회원정보가 없습니다.</string>
     <string name="find_email">Email</string>
     <string name="findPWView">비밀번호 찾기</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!--    setting-->
+    <string name="title_setting">설정</string>
+    <string name="ex_username">닉네임</string>
+    <string name="heart">찜 목록</string>
+    <string name="follow">팔로우</string>
+    <string name="review">나의 후기</string>
+    <string name="edit_nailshop">매장 정보 수정</string>
 </resources>
