--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="password">비밀번호</string>
     <string name="check_pw">비밀번호 확인</string>
     <string name="phonenum">전화번호</string>
+    <string name="shopphonenum">매장 전화번호</string>
     <string name="shopname">네일샵 이름</string>
     <string name="ceoname">운영자 이름</string>
     <string name="address">주소</string>
@@ -44,4 +45,6 @@
     <string name="follow">팔로우</string>
     <string name="review">나의 후기</string>
     <string name="edit_nailshop">매장 정보 수정</string>
+    <string name="change_pw">비밀번호 변경</string>
+    <string name="newpw">새 비밀번호</string>
 </resources>
