--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,12 @@
     <string name="sort_recommand">추천순</string>
     <string name="sort_distance">거리순</string>
     <string name="sort_review">리뷰많은순</string>
+    <string name="ex_shopname">만두네일</string>
+    <string name="ex_rating">5.0</string>
+    <string name="ex_count">(112)</string>
+    <string name="ex_time">11:00~21:00</string>
+    <string name="ex_closed">(휴무 : 일)</string>
+    <string name="ex_location">경기도 용인시 수지구 현암로 123번길 33</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
