--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,11 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!--    chatting-->
+    <string name="title_chatting">채팅</string>
+    <string name="ex_name">닉네임</string>
+    <string name="ex_content">마지막 내용</string>
+
     <!--    setting-->
     <string name="title_setting">설정</string>
     <string name="ex_username">닉네임</string>
