--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <!--    storeInfo-->
     <string name="storeInfo">매장등록</string>
     <string name="opentime">영업시간</string>
+    <string name="closed">휴무일</string>
     <string name="memo">매장정보</string>
     <string name="menu_nail">네일</string>
     <string name="menu_pedi">페디</string>
@@ -53,11 +54,21 @@
     <string name="sort_review">리뷰많은순</string>
     <string name="ex_shopname">만두네일</string>
     <string name="ex_rating">5.0</string>
-    <string name="ex_count">(112)</string>
+    <string name="ex_count">112</string>
     <string name="ex_time">11:00~21:00</string>
-    <string name="ex_closed">(휴무 : 일)</string>
+    <string name="ex_closed">일</string>
     <string name="ex_location">경기도 용인시 수지구 현암로 123번길 33</string>
 
+    <!-- Information_home-->
+    <string name="ex_title">네일샵 이름</string>
+    <string name="Info_opentime">영업시간</string>
+    <string name="Info_shop">매장정보</string>
+    <string name="ex_info">예약제</string>
+    <string name="location">위치</string>
+    <string name="call">전화</string>
+    <string name="reservation">예약</string>
+    <string name="share">공유</string>
+    <string name="img_title">매장 대표 이미지</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
