--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,9 @@
     <string name="closed">휴무일</string>
     <string name="memo">매장정보</string>
     <string name="menu_nail">네일</string>
+    <string name="menu_nail_price">네일 가격</string>
     <string name="menu_pedi">페디</string>
+    <string name="menu_pedi_price">페디 가격</string>
     <string name="menuname">이름</string>
     <string name="menuprice">가격</string>
     <string name="next">다음</string>
